--- a/lesson3/Lesson3_homework/style.css
+++ b/lesson3/Lesson3_homework/style.css
@@ -10,7 +10,7 @@ body {
 	width: 960px;
 	margin: 20px auto;
 	margin-top: 30px; 
-	background: red;
+	/*background: red;*/
 }
 
 .header {
@@ -51,23 +51,40 @@ body {
 	background: red;
 }
 
-/*.content {
-	width: 630px;
-	height: 50px;
-	margin-right: 10px;
-	background: green;
-}
-
 .sidebar {
 	width: 320px;
-	height: 50px;
-	background: yellow;
+	height: 600px;
+	background: LightPink;
+	float: right;
+}
+
+.content {
+	margin-right: 20px;
+	/*background: green;*/
+}
+
+.article1 {
+	width: 620px;
+	margin-bottom: 10px;
+	background: #FFFFC2; 
+}
+
+.article2 {
+	width: 620px;
+	margin-bottom: 10px;
+	background: #FFFFC2;
+}
+
+.article3 {
+	width: 620px;
+	margin-bottom: 10px; 
+	background: #FFFFC2;
 }
 
 .footer {
 	height: 50px;
 	margin-top: 10px;
-	background: purple;
+	background: #C891C8;
 }
 
 .fl {
@@ -76,7 +93,7 @@ body {
 
 .fr {
 	float: right;
-}*/
+}
 
 .clear {
 	clear: both;
