--- a/lesson12/css/style.css
+++ b/lesson12/css/style.css
@@ -1,16 +1,138 @@
-/* Welcome to Compass.
- * In this file you should write your main styles. (or centralize your imports)
- * Import this file using the following HTML or equivalent:
- * <link href="/css/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
-/* line 10, ../sass/style.scss */
-.start {
-  border-color: #c3c3c3;
-}
-/* line 12, ../sass/style.scss */
-.start p {
-  color: #c3c3c3;
-}
 /* line 15, ../sass/style.scss */
-.start button {
-  background: #c3c3c3;
+.info, .error, .warning, .submit {
+  border-radius: 4px;
+  border: none;
+  color: white;
+  font-size: 20px;
+}
+/* line 20, ../sass/style.scss */
+.info::before, .error::before, .warning::before, .submit::before {
+  content: "";
+}
+
+/* line 25, ../sass/style.scss */
+.info {
+  background: blue;
+}
+/* line 10, ../sass/style.scss */
+.info:hover {
+  background: rgba(0, 0, 255, 0.1);
+}
+/* line 28, ../sass/style.scss */
+.info-btn {
+  font-size: 32px;
+}
+
+/* line 33, ../sass/style.scss */
+.error {
+  background: red;
+}
+/* line 10, ../sass/style.scss */
+.error:hover {
+  background: rgba(255, 0, 0, 0.1);
+}
+
+/* line 38, ../sass/style.scss */
+.warning {
+  background: orange;
+}
+/* line 10, ../sass/style.scss */
+.warning:hover {
+  background: rgba(255, 165, 0, 0.1);
+}
+
+/* line 43, ../sass/style.scss */
+.submit {
+  background: green;
+}
+/* line 10, ../sass/style.scss */
+.submit:hover {
+  background: rgba(0, 128, 0, 0.1);
+}
+
+/* line 51, ../sass/style.scss */
+.col-1 {
+  width: 6.25%;
+}
+
+/* line 51, ../sass/style.scss */
+.col-2 {
+  width: 12.5%;
+}
+
+/* line 51, ../sass/style.scss */
+.col-3 {
+  width: 18.75%;
+}
+
+/* line 51, ../sass/style.scss */
+.col-4 {
+  width: 25%;
+}
+
+/* line 51, ../sass/style.scss */
+.col-5 {
+  width: 31.25%;
+}
+
+/* line 51, ../sass/style.scss */
+.col-6 {
+  width: 37.5%;
+}
+
+/* line 51, ../sass/style.scss */
+.col-7 {
+  width: 43.75%;
+}
+
+/* line 51, ../sass/style.scss */
+.col-8 {
+  width: 50%;
+}
+
+/* line 51, ../sass/style.scss */
+.col-9 {
+  width: 56.25%;
+}
+
+/* line 51, ../sass/style.scss */
+.col-10 {
+  width: 62.5%;
+}
+
+/* line 51, ../sass/style.scss */
+.col-11 {
+  width: 68.75%;
+}
+
+/* line 51, ../sass/style.scss */
+.col-12 {
+  width: 75%;
+}
+
+/* line 51, ../sass/style.scss */
+.col-13 {
+  width: 81.25%;
+}
+
+/* line 51, ../sass/style.scss */
+.col-14 {
+  width: 87.5%;
+}
+
+/* line 51, ../sass/style.scss */
+.col-15 {
+  width: 93.75%;
+}
+
+/* line 51, ../sass/style.scss */
+.col-16 {
+  width: 100%;
+}
+
+@media screen and (min-width: 720px) {
+  /* line 2, ../sass/min720.scss */
+  .wrap {
+    max-width: 100%;
+  }
 }
