--- a/lesson12/sass/style.scss
+++ b/lesson12/sass/style.scss
@@ -1,18 +1,56 @@
-/* Welcome to Compass.
- * In this file you should write your main styles. (or centralize your imports)
- * Import this file using the following HTML or equivalent:
- * <link href="/css/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
-
 // @import "compass/reset";
 
-$color: #c3c3c3;
+$info-color: blue;
+$error-color: red;
+$warning-color: orange;
+$submit-color: green;
 
-.start {
-	border-color: $color;
-	p {
-		color: $color;
-	}
-	button {
-		background: $color;
+@mixin btn-bg($bg-color) {
+	background: $bg-color;
+	&:hover {
+		background: rgba($bg-color, .1);
 	}
 }
+
+%btn {
+	border-radius: 4px;
+	border: none;
+	color: white;
+	font-size: 20px;
+	&::before {
+		content: "";
+	}
+}
+
+.info {
+	@extend %btn;
+	@include btn-bg($info-color);
+	&-btn {
+		font-size: 32px;
+	}
+}
+
+.error {
+	@extend %btn;
+	@include btn-bg($error-color);
+}
+
+.warning {
+	@extend %btn;
+	@include btn-bg($warning-color);
+}
+
+.submit {
+	@extend %btn;
+	@include btn-bg($submit-color);
+}
+
+$cols: 16;
+
+@for $i from 1 through $cols {
+	.col-#{$i} {
+		width:  100%/$cols*$i;
+	}
+}
+
+@import "min720.scss";
