--- a/lesson12/hw/Webstore_v_3.0/style.css
+++ b/lesson12/hw/Webstore_v_3.0/style.css
@@ -106,9 +106,6 @@ header nav ul {
 	margin: 0 auto;
 	width: 20em;
 }	
-.client-login {
-	margin-left: 25%;
-}
 .client-login span {
 	display: inline-block;
 	margin: 1.6em 0 1.1em;
@@ -533,6 +530,10 @@ aside .sidebar span {
 		margin-top: 4em;
 	}
 
+	.client-login {
+		margin-left: 25%;
+	}
+
 	.wrap {
 		width: 100%;
 		margin: auto;
@@ -865,6 +866,7 @@ aside .sidebar span {
 		background-color: #e0e0e0;
 	}
 	.latest-products h4 {
+		margin-bottom: 1em;
 		color: #333;
 		font-size: .875em;
 		font-weight: bold;
@@ -878,7 +880,7 @@ aside .sidebar span {
 		color: #8e8e8e;
 		font-size: .75em;
 		list-style-type: none;
-		line-height: 1;
+		line-height: 2;
 	}
 	.latest-products a i {
 		color: #333;
