--- a/lesson13/hw/Gr_4_Webstore_v_final/style.css
+++ b/lesson13/hw/Gr_4_Webstore_v_final/style.css
@@ -59,10 +59,10 @@ header {
 header nav {
 	width: 100%;
 	height: 3.6875em;
-	background-image: -moz-linear-gradient(bottom, #f7931d 0%, #f7931d 23.58%, #f7bb49 76.42%, #f7bb49 100%);
+	/*background-image: -moz-linear-gradient(bottom, #f7931d 0%, #f7931d 23.58%, #f7bb49 76.42%, #f7bb49 100%);
 	background-image: -o-linear-gradient(bottom, #f7931d 0%, #f7931d 23.58%, #f7bb49 76.42%, #f7bb49 100%);
-	background-image: -webkit-linear-gradient(bottom, #f7931d 0%, #f7931d 23.58%, #f7bb49 76.42%, #f7bb49 100%);
-	background-image: linear-gradient(bottom, #f7931d 0%, #f7931d 23.58%, #f7bb49 76.42%, #f7bb49 100%);
+	background-image: -webkit-linear-gradient(bottom, #f7931d 0%, #f7931d 23.58%, #f7bb49 76.42%, #f7bb49 100%);*/
+	background: linear-gradient(#f7931d 0%, #f7931d 23.58%, #f7bb49 76.42%, #f7bb49 100%);
 	border-top: 0.0625em solid #f9f9f9;
 	border-bottom: 0.0625em solid #979797;
 }
@@ -78,17 +78,17 @@ header nav ul {
 	text-transform: uppercase;
 	border: 0.1em solid black;
 	border-radius: 0.5em;
-	background-image: -moz-linear-gradient(bottom, #000, #494848);
+	/*background-image: -moz-linear-gradient(bottom, #000, #494848);
 	background-image: -o-linear-gradient(bottom, #000, #494848);
-	background-image: -webkit-linear-gradient(bottom, #000, #494848);
-	background-image: linear-gradient(to top, #000, #494848);
+	background-image: -webkit-linear-gradient(bottom, #000, #494848);*/
+	background: linear-gradient(#000, #494848);
 }
 .btn:hover {
 	border: 0.1em solid black;
-	background-image: -moz-linear-gradient(bottom, #f7931d 0%, #f7931d 23.58%, #f7bb49 76.42%, #f7bb49 100%);
+	/*background-image: -moz-linear-gradient(bottom, #f7931d 0%, #f7931d 23.58%, #f7bb49 76.42%, #f7bb49 100%);
 	background-image: -o-linear-gradient(bottom, #f7931d 0%, #f7931d 23.58%, #f7bb49 76.42%, #f7bb49 100%);
-	background-image: -webkit-linear-gradient(bottom, #f7931d 0%, #f7931d 23.58%, #f7bb49 76.42%, #f7bb49 100%);
-	background-image: linear-gradient(bottom, #f7931d 0%, #f7931d 23.58%, #f7bb49 76.42%, #f7bb49 100%);
+	background-image: -webkit-linear-gradient(bottom, #f7931d 0%, #f7931d 23.58%, #f7bb49 76.42%, #f7bb49 100%);*/
+	background: linear-gradient(#f7931d 0%, #f7931d 23.58%, #f7bb49 76.42%, #f7bb49 100%);
 }
 .btn-menu {
 	float: left;
@@ -130,10 +130,10 @@ header nav ul {
 	margin-right: .8em;
 	border: 1px solid #ddd;
 	background-color: #333;
-	background-image: -moz-linear-gradient(bottom, #ededed 0%, #fff 100%);
+	/*background-image: -moz-linear-gradient(bottom, #ededed 0%, #fff 100%);
 	background-image: -o-linear-gradient(bottom, #ededed 0%, #fff 100%);
-	background-image: -webkit-linear-gradient(bottom, #ededed 0%, #fff 100%);
-	background-image: linear-gradient(bottom, #ededed 0%, #fff 100%);
+	background-image: -webkit-linear-gradient(bottom, #ededed 0%, #fff 100%);*/
+	background: linear-gradient(#ededed 0%, #fff 100%);
 	color: #959595;
 	font-size: 0.75em;
 	text-indent: .7em;
@@ -147,10 +147,10 @@ header nav ul {
 	height: 26px;
 	border: 1px solid #000;
 	background-color: #333;
-	background-image: -moz-linear-gradient(bottom, #222 0%, #000 49.27%, #383838 100%);
+	/*background-image: -moz-linear-gradient(bottom, #222 0%, #000 49.27%, #383838 100%);
 	background-image: -o-linear-gradient(bottom, #222 0%, #000 49.27%, #383838 100%);
-	background-image: -webkit-linear-gradient(bottom, #222 0%, #000 49.27%, #383838 100%);
-	background-image: linear-gradient(bottom, #222 0%, #000 49.27%, #383838 100%);
+	background-image: -webkit-linear-gradient(bottom, #222 0%, #000 49.27%, #383838 100%);*/
+	background: linear-gradient(#222 0%, #000 49.27%, #383838 100%);
 	color: #cc820c;
 	font-size: 0.75em;
 	outline: none;
@@ -174,10 +174,10 @@ section {
 	margin-left: 1%;
 	padding: 0.25em;
 	border: 0.3125em solid black;
-	background-image: -moz-linear-gradient(bottom, #000, #494848);
+	/*background-image: -moz-linear-gradient(bottom, #000, #494848);
 	background-image: -o-linear-gradient(bottom, #000, #494848);
-	background-image: -webkit-linear-gradient(bottom, #000, #494848);
-	background-image: linear-gradient(to top, #000, #494848);
+	background-image: -webkit-linear-gradient(bottom, #000, #494848);*/
+	background: linear-gradient(#000, #494848);
 	position: relative;
 }
 
@@ -185,10 +185,13 @@ section {
 	margin-top: 1%;
 	font-size: 14px;
 	text-transform: uppercase;
-	background: linear-gradient(#fcc076, #ff930c);  
+	background: linear-gradient(#fcc076, #ff930c);
+	background-clip: text;  
 	-webkit-background-clip: text; 
-	-moz-background-clip: text; 
+	/*-moz-background-clip: text; */
+	background-clip: text;
 	-webkit-text-fill-color: transparent;
+	/*color: transparent;*/
 	color: #ff930c;
 }
 
@@ -233,19 +236,19 @@ section a {
 	text-decoration: none;
 	border: 0.1em solid black;
 	border-radius: 0.5em;
-	background-image: -moz-linear-gradient(bottom, #000, #494848);
+	/*background-image: -moz-linear-gradient(bottom, #000, #494848);
 	background-image: -o-linear-gradient(bottom, #000, #494848);
-	background-image: -webkit-linear-gradient(bottom, #000, #494848);
-	background-image: linear-gradient(to top, #000, #494848);
+	background-image: -webkit-linear-gradient(bottom, #000, #494848);*/
+	background: linear-gradient(#000, #494848);
 }
 
  section a:hover {
 	border: 0.1em solid #d88119;
 	background: #ff930c;
-	background-image: -moz-linear-gradient(bottom, #f7931d 0%, #f7931d 23.58%, #f7bb49 76.42%, #f7bb49 100%);
+	/*background-image: -moz-linear-gradient(bottom, #f7931d 0%, #f7931d 23.58%, #f7bb49 76.42%, #f7bb49 100%);
 	background-image: -o-linear-gradient(bottom, #f7931d 0%, #f7931d 23.58%, #f7bb49 76.42%, #f7bb49 100%);
-	background-image: -webkit-linear-gradient(bottom, #f7931d 0%, #f7931d 23.58%, #f7bb49 76.42%, #f7bb49 100%);
-	background-image: linear-gradient(bottom, #f7931d 0%, #f7931d 23.58%, #f7bb49 76.42%, #f7bb49 100%);
+	background-image: -webkit-linear-gradient(bottom, #f7931d 0%, #f7931d 23.58%, #f7bb49 76.42%, #f7bb49 100%);*/
+	background: linear-gradient(#f7931d 0%, #f7931d 23.58%, #f7bb49 76.42%, #f7bb49 100%);
 }
 
 .content {
@@ -263,10 +266,10 @@ article span {
 	font-size: 12px;
 	color: white;
 	border: 0.1em solid #d88119;
-	background-image: -moz-linear-gradient(bottom, #f7931d 0%, #f7931d 23.58%, #f7bb49 76.42%, #f7bb49 100%);
+	/*background-image: -moz-linear-gradient(bottom, #f7931d 0%, #f7931d 23.58%, #f7bb49 76.42%, #f7bb49 100%);
 	background-image: -o-linear-gradient(bottom, #f7931d 0%, #f7931d 23.58%, #f7bb49 76.42%, #f7bb49 100%);
-	background-image: -webkit-linear-gradient(bottom, #f7931d 0%, #f7931d 23.58%, #f7bb49 76.42%, #f7bb49 100%);
-	background-image: linear-gradient(bottom, #f7931d 0%, #f7931d 23.58%, #f7bb49 76.42%, #f7bb49 100%);
+	background-image: -webkit-linear-gradient(bottom, #f7931d 0%, #f7931d 23.58%, #f7bb49 76.42%, #f7bb49 100%);*/
+	background: linear-gradient(#f7931d 0%, #f7931d 23.58%, #f7bb49 76.42%, #f7bb49 100%);
 	display: block;
 }
 
@@ -338,10 +341,10 @@ aside {
 	line-height: 2.5em;
 	border: 0.1em solid black;
 	border-radius: 0.5em 0.5em 0em 0em;
-	background-image: -moz-linear-gradient(bottom, #000, #494848);
+	/*background-image: -moz-linear-gradient(bottom, #000, #494848);
 	background-image: -o-linear-gradient(bottom, #000, #494848);
-	background-image: -webkit-linear-gradient(bottom, #000, #494848);
-	background-image: linear-gradient(to top, #000, #494848);
+	background-image: -webkit-linear-gradient(bottom, #000, #494848);*/
+	background: linear-gradient(#000, #494848);
 	display: block;
 	position: relative;
 }
@@ -361,10 +364,10 @@ aside {
 .search_form {
 	border: 0.1em solid #cccccc;
 	border-top: none;
-	background-image: -moz-linear-gradient(bottom, #ededed, white);
+	/*background-image: -moz-linear-gradient(bottom, #ededed, white);
 	background-image: -o-linear-gradient(bottom, #ededed, white);
-	background-image: -webkit-linear-gradient(bottom, #ededed, white);
-	background-image: linear-gradient(to top, #ededed, white);
+	background-image: -webkit-linear-gradient(bottom, #ededed, white);*/
+	background: linear-gradient(#ededed, white);
 	position: relative;
 }
 
@@ -375,10 +378,10 @@ aside {
 	margin-top: 1em;
 	margin-left: 0.5em;
 	border: 0.1em solid #cccccc;
-	background-image: -moz-linear-gradient(bottom, #ededed, white);
+	/*background-image: -moz-linear-gradient(bottom, #ededed, white);
 	background-image: -o-linear-gradient(bottom, #ededed, white);
-	background-image: -webkit-linear-gradient(bottom, #ededed, white);
-	background-image: linear-gradient(to top, #ededed, white);
+	background-image: -webkit-linear-gradient(bottom, #ededed, white);*/
+	background: linear-gradient(#ededed, white);
 }
 
 .search_form input:focus {
@@ -428,10 +431,10 @@ aside {
 	text-shadow: 0em 0.1em 0.36em rgba(24, 24, 24, 1);
 	border: 0.1em solid #f7931d;
 	background: #ff930c;
-	background-image: -moz-linear-gradient(bottom, #f7931d 0%, #f7931d 23.58%, #f7bb49 76.42%, #f7bb49 100%);
+	/*background-image: -moz-linear-gradient(bottom, #f7931d 0%, #f7931d 23.58%, #f7bb49 76.42%, #f7bb49 100%);
 	background-image: -o-linear-gradient(bottom, #f7931d 0%, #f7931d 23.58%, #f7bb49 76.42%, #f7bb49 100%);
-	background-image: -webkit-linear-gradient(bottom, #f7931d 0%, #f7931d 23.58%, #f7bb49 76.42%, #f7bb49 100%);
-	background-image: linear-gradient(bottom, #f7931d 0%, #f7931d 23.58%, #f7bb49 76.42%, #f7bb49 100%);
+	background-image: -webkit-linear-gradient(bottom, #f7931d 0%, #f7931d 23.58%, #f7bb49 76.42%, #f7bb49 100%);*/
+	background: linear-gradient(#f7931d 0%, #f7931d 23.58%, #f7bb49 76.42%, #f7bb49 100%);
 	position: absolute;
 	bottom: 1em;
 	right: 3%;
@@ -440,10 +443,10 @@ aside {
 .search_form button:hover {
 	color: #ff930c;
 	border: 0.1em solid black;
-	background-image: -moz-linear-gradient(bottom, #000, #494848);
+	/*background-image: -moz-linear-gradient(bottom, #000, #494848);
 	background-image: -o-linear-gradient(bottom, #000, #494848);
-	background-image: -webkit-linear-gradient(bottom, #000, #494848);
-	background-image: linear-gradient(to top, #000, #494848);
+	background-image: -webkit-linear-gradient(bottom, #000, #494848);*/
+	background: linear-gradient(#000, #494848);
 }
 
 aside .sidebar {
@@ -554,8 +557,8 @@ aside .sidebar span {
 		margin: 2%;
 		padding: 0.625em 0em;
 		background-color: #fff;
-		-moz-box-shadow: 0 .1185em .375em rgba(0,0,0,.15);
-		-webkit-box-shadow: 0 .1185em .375em rgba(0,0,0,.15);
+		/*-moz-box-shadow: 0 .1185em .375em rgba(0,0,0,.15);
+		-webkit-box-shadow: 0 .1185em .375em rgba(0,0,0,.15);*/
 		box-shadow: 0 .1185em .375em rgba(0,0,0,.15);
 		position: relative;
 	}
@@ -596,10 +599,10 @@ aside .sidebar span {
 		border: 0.1em solid #ff930c;
 		border-radius: 0.5em;
 		background: #ff930c;
-		background-image: -moz-linear-gradient(bottom, #f7931d 0%, #f7931d 23.58%, #f7bb49 76.42%, #f7bb49 100%);
+		/*background-image: -moz-linear-gradient(bottom, #f7931d 0%, #f7931d 23.58%, #f7bb49 76.42%, #f7bb49 100%);
 		background-image: -o-linear-gradient(bottom, #f7931d 0%, #f7931d 23.58%, #f7bb49 76.42%, #f7bb49 100%);
-		background-image: -webkit-linear-gradient(bottom, #f7931d 0%, #f7931d 23.58%, #f7bb49 76.42%, #f7bb49 100%);
-		background-image: linear-gradient(bottom, #f7931d 0%, #f7931d 23.58%, #f7bb49 76.42%, #f7bb49 100%);
+		background-image: -webkit-linear-gradient(bottom, #f7931d 0%, #f7931d 23.58%, #f7bb49 76.42%, #f7bb49 100%);*/
+		background: linear-gradient(#f7931d 0%, #f7931d 23.58%, #f7bb49 76.42%, #f7bb49 100%);
 		display: block;
 		position: absolute;
 		top: 11.7em;
